--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -1,3 +1,8 @@
+/*
+  SPDX-FileCopyrightText: none
+  SPDX-License-Identifier: CC0-1.0
+*/
+
 /*!
  * @mainpage Kontact Plugin Interface Library
  *
